text alignment why telegram fixed

--- a/whatsapp.css
+++ b/whatsapp.css
@@ -11,3 +11,7 @@
         display:none
     }
 }
+
+.why div div {
+    text-align: center;
+}
